removed privacy center

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body {
   color: #f1f5f9;
 }
 
+#ezPrivacyCenter {
+  display: none !important;
+}
+
 /* Remove number input spinners */
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
