--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ input[type="number"] {
 /* Custom scrollbar */
 ::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar-track {
