more accurate stat icons

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 @import "tailwindcss";
 
+@font-face {
+  font-family: 'Minecraft';
+  src: url('/fonts/unifont-17.0.03.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", "Minecraft", sans-serif;
   background-color: #0f172a;
   color: #f1f5f9;
 }
