--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: 'Minecraft';
-  src: url('/fonts/unifont-17.0.03.otf') format('opentype');
+  src: url('/public/fonts/unifont-17.0.03.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -13,6 +13,45 @@ body {
   font-family: "Inter", "Minecraft", sans-serif;
   background-color: #0f172a;
   color: #f1f5f9;
+}
+
+.pn-leaderboard {
+  width: 100%;
+  min-height: 90px;
+  margin: 0 auto 12px;
+}
+
+.pn-sidebar {
+  display: none;
+}
+
+@media (min-width: 1200px) {
+  .pn-page {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 100px minmax(0, 1fr) 300px;
+    column-gap: var(16px);
+    align-items: start;
+  }
+
+  .pn-content {
+    grid-column: 2;
+    min-width: 0;
+  }
+
+  .pn-sidebar {
+    grid-column: 3;
+    display: block;
+    width: 300px;
+    min-height: 600px;
+    position: sticky;
+    top: 16px;
+  }
+
+  .pn-page::before {
+    content: "";
+    grid-column: 1;
+  }
 }
 
 /* Remove number input spinners */
